# bulgarian-accounting-lex-assistant

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements-lex.txt  requirements-ocr.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  schemas.py
backend/app/core/: config.py  security.py
backend/app/db/: __init__.py  base.py  bootstrap.py  models.py
backend/app/domain/: __init__.py  (+1 more)
backend/eval/: README.md  cases.py  eval_set.jsonl  eval_set_laws.jsonl  metrics.py  run_eval.py  run_eval_agent.py  run_eval_laws.py
backend/invoice_rag/: README.md  __init__.py  citations.py  config.py  dates.py  models.py
backend/lex/: requirements.txt  run_ingest.py  run_query.py
backend/scripts/: __init__.py  demo_invoice_rag.py  rebuild_invoice_index.py  seed_eval_tenant.py
backend/tests/: conftest.py  test_agent_answer.py  test_agent_dispatch.py  test_agent_loop.py  test_agent_prompts.py  test_agent_run.py  test_agent_tools.py  test_chat_agent_route.py  test_company_lookup.py  test_doc_dispatch.py  test_doc_types.py  test_document_files.py  test_eik.py  test_eval_agent_runner.py  test_eval_cases.py  test_eval_fixtures.py  test_eval_metrics.py  test_eval_phase1_consistency.py  test_field_models.py  test_ocr_preprocess.py  test_party_split.py  test_seed_eval_tenant.py  test_training.py  test_vision_fallback.py
backend/training/: __init__.py  bootstrap.py  crossval.py  dataset.py  evaluate.py  prelabel.py  train_doctype.py  train_extractors.py
(+149 files in other folders)
